# newstudy

./: .gitignore  BACKEND_ANALYSIS_REPORT.md  PROJECT_ARCHITECTURE.md  README.md  今日复习和困难词条逻辑说明.md  复习时间间隔说明.md  复习间隔时间实现说明.md  学习中心词条逻辑说明.md  接口对接完成总结.md  接口对接状态.md  改进完成说明.md  数据库修复说明.md  闪词学习产品文档.md  间隔复习产品文档.md  首页学习统计产品文档.md
backend/: .dockerignore  .env.example  .gitignore  API_IMPLEMENTATION.md  BACKUP_MIGRATION.md  DATABASE.md  DOCKER_DEPLOYMENT.md  Dockerfile  README_DATABASE.md  README_DOCKER.md  SETUP.md  add_role_column.py  add_sample_data.py  add_test_data.py  backup_restore.py  check_pg_notes.py  check_pg_schema.py  config.py  curious_student_agent.py  database.py  database_async.py  db_sql.py  delete_test_notes.py  docker-compose.yml  feynman_evaluator.py  file_text_extractor.py  fix_db_comprehensive.py  fix_id_column.py  get_default_user.py  init.sql  init_db.py  init_db_simple.py  init_default_user.py  llm.py  main.py  migrate_add_learning_history.py  migrate_review_schedule.py  migrate_to_postgresql.py  models.py  note_terms_extractor.py  (+17 more)
backend/migrations/: add_learning_records.py  add_note_default_role.py  migrate_card_status_enum.py
backend/newstudyapp/ohos/entry/src/main/ets/plugins/: SpeechRecognizerPlugin.ets
backend/sql/: README_MIGRATION.md  init.sql  migration_export.sql
newstudyapp/: .gitignore  README.md  pubspec.yaml
newstudyapp/lib/: main.dart
newstudyapp/lib/app/: app.dart
newstudyapp/linux/: CMakeLists.txt  my_application.cc
newstudyapp/ohos/: build-profile.json5  oh-package.json5
newstudyapp/test/: widget_test.dart
newstudyapp/web/: index.html  manifest.json
newstudyapp/windows/: CMakeLists.txt
(+63 files in other folders)
