[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.1",
    "langchain-openai>=1.0.2",
    "langgraph>=1.0.3",
    "openai>=1.0",
    "pymupdf>=1.25.0",  # 替换pypdf，性能更强
    "python-docx>=1.1.2",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.0",
    "socksio>=1.0.0",
    "uvicorn>=0.38.0",
    "easyocr>=1.7.1",
    "opencv-python-headless>=4.10.0.84",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "pytesseract>=0.3.10",  # 可选：Tesseract OCR（需要系统安装tesseract）
]
